--- a/pom.xml
+++ b/pom.xml
@@ -65,15 +65,19 @@
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
 			<artifactId>retrofit</artifactId>
-			<version>2.6.2</version>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>converter-scalars</artifactId>
+			<version>2.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
 			<artifactId>converter-jackson</artifactId>
-			<version>2.6.2</version>
+			<version>2.7.0</version>
 		</dependency>
-
-
+		
 	</dependencies>
 
 	<build>
