--- a/pom.xml
+++ b/pom.xml
@@ -5,79 +5,81 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sixsprints</groupId>
 	<artifactId>json-transform</artifactId>
-	<version>0.1.5</version>
+	<version>0.1.6</version>
 	<name>json-transform</name>
 	<description>Json Transform API</description>
-
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
+		<lombok.version>1.18.26</lombok.version>
+		<jolt.version>0.1.7</jolt.version>
+		<guava.version>31.0.1-jre</guava.version>
+		<retrofit.version>2.9.0</retrofit.version>
+		<slf4j.version>2.0.6</slf4j.version>
+		<junit.version>5.9.2</junit.version>
+		<maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.20</version>
+			<version>${lombok.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.bazaarvoice.jolt</groupId>
 			<artifactId>jolt-core</artifactId>
-			<version>0.1.1</version>
+			<version>${jolt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.bazaarvoice.jolt</groupId>
 			<artifactId>json-utils</artifactId>
-			<version>0.1.1</version>
+			<version>${jolt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>30.1.1-jre</version>
+			<version>${guava.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.10.10</version>
-		</dependency>
-
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
 			<artifactId>retrofit</artifactId>
-			<version>2.9.0</version>
+			<version>${retrofit.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
 			<artifactId>converter-scalars</artifactId>
-			<version>2.9.0</version>
+			<version>${retrofit.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
 			<artifactId>converter-jackson</artifactId>
-			<version>2.9.0</version>
+			<version>${retrofit.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
